<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/widget288"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbars="vertical" android:fillViewport="false" android:id="@+id/ScrollView" android:layout_alignParentTop="false" android:layout_below="@+id/TextView01" android:layout_centerVertical="false" android:scrollbarStyle="insideOverlay" android:background="@color/eventLogBackground" android:layout_centerHorizontal="false" android:layout_height="240sp" android:layout_width="240sp">

<LinearLayout android:id="@+id/LinearLayout01" android:orientation="vertical" android:scrollbarAlwaysDrawVerticalTrack="true" android:layout_height="fill_parent" android:layout_width="fill_parent">
	<TextView android:id="@+id/TextView02" android:layout_weight="1.0" android:text="@string/defaultLogMessage" android:layout_height="fill_parent" android:layout_width="fill_parent" android:textColor="@color/eventLogTextColor"></TextView>
</LinearLayout>


</ScrollView>
	
	

<android.opengl.GLSurfaceView android:layout_below="@+id/TextView01" android:layout_toRightOf="@+id/ScrollView" android:layout_centerVertical="false" android:layout_height="240sp" android:id="@+id/SurfaceView01" android:layout_width="240sp"></android.opengl.GLSurfaceView>
<TableLayout android:id="@+id/TableLayout01" android:layout_below="@id/ScrollView" android:layout_width="fill_parent" android:layout_alignParentBottom="true" android:layout_height="20sp"><TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="fill_parent"><TableLayout android:id="@+id/TableLayout02" android:layout_height="wrap_content" android:layout_width="100sp"><TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:width="160sp" android:layout_alignParentBottom="false" android:layout_alignParentLeft="true" android:layout_toLeftOf="@+id/Button01" android:text="@string/moveLabel" android:id="@+id/moveView" android:textColor="@color/normalArrowsFontColor"></TextView></TableRow>
<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/arrowsLabel" android:id="@+id/arrowView" android:textColor="@color/normalArrowsFontColor"></TextView>
</TableRow>
</TableLayout><Button android:id="@+id/Button01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:text="@string/shoot" android:layout_alignParentLeft="false" android:layout_alignParentBottom="false" android:layout_toLeftOf="@+id/Button02" android:layout_toRightOf="@+id/TextView03"></Button><Button android:id="@+id/Button02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:text="@string/move" android:layout_alignParentLeft="false" android:layout_alignParentBottom="false" android:layout_toLeftOf="@+id/Button03" android:layout_toRightOf="@+id/Button01"></Button><Button android:id="@+id/Button03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/startGame" android:layout_toLeftOf="@+id/Button04" android:layout_alignParentLeft="false" android:layout_alignParentBottom="false" android:layout_toRightOf="@+id/Button02"></Button><Button android:id="@+id/Button04" android:layout_height="wrap_content" android:text="@string/clearLog" android:layout_alignParentRight="true" android:layout_alignParentLeft="false" android:layout_alignParentBottom="false" android:layout_toRightOf="@+id/Button03" android:layout_width="wrap_content"></Button>

</TableRow>
</TableLayout>

</RelativeLayout>